# llama.cpp

./: .gitignore  .yapf.style  AGENTS.md  CLAUDE.md  CMakeLists.txt  CRITICAL_BUG_ANALYSIS.md  FINAL_DEBUG_REPORT.md  FLASH_ATTENTION_DEBUG_SUMMARY.md  FlashDecoding_Analysis.md  GEMINI.md  INTEGRATION_STATUS.md  MIXED_ATTENTION_IMPLEMENTATION_STATUS.md  TEST_RESULTS.md  build.sh  fix_dst_accumulation.py  fix_dst_accumulation_v2.py  fix_dst_accumulation_v3.py  fix_memset_bug.py  fix_state_timing.py  fix_unnormalized_accumulation.py  flash_attention_state_analysis.md  flash_decoding_diagnostic_report.md  flash_decoding_fix_summary.md  llama_kv_cache_analysis.md  mixed_kv_cache_diagnosis.md  nsys_profile.sh  profile.sh  test-flash-attn-math  test-flash-attn-state-improvements.md
.cursor/: Dockerfile  environment.json
.cursor/rules/: ggml-cpu-acceleration.mdc
.taskmaster/: config.json  state.json
.taskmaster/docs/: qlutattn_optimization_summary.md  refactor_qlutattn.txt  task5_pack_weights_optimization.md
.taskmaster/docs/research/: 2025-08-22_quantkvcachekper-tokenvper-channlultrathink.md  pack_refactor_design.md
.taskmaster/reports/: PACK_WEIGHTS_OPTIMIZATION_REPORT.md  kernel_config_analysis.md  qlutattn_quantization_formats.md  task-complexity-report.json  task2_kernel_config_unified.md  task3_code_cleanup.md  task4_pack_size_unification.md
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  tasks.json
examples/: CMakeLists.txt
examples/kv-cache-monitor/: CMakeLists.txt  kqv-tensor-reader.cpp  kqv-trace-monitor.cpp  mask-trace-monitor.cpp
examples/llama-bench/: llama-bench.cpp
examples/single-layer-mixed-cache/: CMakeLists.txt  single-layer-mixed-cache.cpp
ggml/include/: ggml-cpu.h  ggml.h
ggml/src/: CMakeLists.txt  ggml-alloc.c  ggml-backend.c  ggml-common.h  ggml-cuda.cu  ggml-impl.h  ggml-metal.m  ggml-profile.cpp  ggml-profile.h  ggml-quants.c  ggml-quants.h  ggml.c
ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu-quants.c  ggml-cpu-quants.h  ggml-cpu.c  ggml-cpu.cpp  ops.cpp  ops.h  pack_weights.h  vec.cpp
ggml/src/ggml-cpu/qlutattn/: lut_attn.cpp  lut_ctor.cpp  lut_ctor.h  pack_weights.cpp  pack_weights.h  qlut_ctor.cpp  qlut_ctor.h  qlutattn-config.cpp  qlutattn-config.h  qlutattn.cpp  qlutattn.h  tbl.cpp  tbl.h
ggml/src/ggml-cpu/tmac/: lut_ctor.cpp  lut_ctor.h  lut_mul_mat.cpp  lut_mul_mat.h  tbl.cpp  tbl.h  tmac.cpp  tmac.h
ggml/src/ggml-cuda/: common.cuh  dmmv.cu  mmvq.cu
include/: llama.h
pocs/: CMakeLists.txt
pocs/pack_weights/: CMakeLists.txt  test_pack_weights_basic.cpp  test_pack_weights_neon.cpp  test_pack_weights_perf.cpp
pocs/qluattn/: CMakeLists.txt
pocs/qlutattn/: CMakeLists.txt  align_attn.cpp  bench_qlutattn_gemv.cpp  bench_qlutattn_vs_q40.cpp  bench_quant_acc.cpp  bench_tmac_gemv.cpp  test_channel_quant.cpp  test_flashattn_identical.cpp  test_qlutattn_128x128.cpp  test_qlutattn_w4g128k.cpp  test_tmac_quant.cpp  test_tmac_simple.cpp
pocs/transpose/: CMakeLists.txt  transpose128.c
pocs/vdot/: CMakeLists.txt  bench_q4_0.cpp  q8dot.cpp  vdot.cpp
requirements/: requirements-convert_hf_to_gguf.txt
scripts/: align_kv-cache.sh  align_kv-mixed.sh  align_mixed-attn.sh  batch_eval.sh  batch_imatrix_quant.sh  batch_quantize.sh  bench_qlutattn.sh  convert_hf_to_gguf.sh
src/: llama-context.cpp  llama-cparams.h  llama-graph.cpp  llama-graph.h  llama-kv-cache-mixed.cpp  llama-kv-cache-mixed.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-model-loader.cpp  llama-model.cpp  llama.cpp
tests/: CMakeLists.txt  perf-model-breakdown.cpp  test-backend-ops.cpp  test-flash-attn-debug.cpp  test-flash-attn-math.cpp  test-flash-attn-state.cpp  test-flash-attn.cpp  test-flash-decoding-custom-op.cpp  test-hermes-mulmat.cpp  test-kvcache-reshape.cpp  test-memory.cpp  test-mixed-kvcache-merge.cpp  test-quantize-accuracy.cpp  test-workspace-share.cpp  test-workspace.cpp  test_e2e.py  test_ggml_mul_mat.cpp  test_gguf_numpy_simple.py  test_int_softmax.py  test_tmac.cpp  test_tmac_simple.cpp
